удалена часть дублирующего кода с gin.HandlerFunc
